  Long ago it was used by the eZ Publish package system.

- eZExtension::findExtensionType
  This method is now deprecated and even though it is still in the code, we 
  highly recommend to use the new eZExtension::getHandlerClass which takes
  advantage of the autoload features. Porting the current kernel to use
  this new method is planned and will be done step by step.


Removed features
----------------

- eZSelectionType loose functions

  The file in which eZSelectionType is defined contained two loose functions,
  namely serializeContentObjectAttribute and unserializeContentObjectAttribute,
  which at the time of introducing them were supposed to be inside the class
  definition. These two functions have been removed.

- eZFilePasstroughHandler

  The deprecated class eZFilePasstroughHandler was removed. Use
  ezFilePassthroughHandler instead.

- eZXMLInputType

  The class eZXMLInputType, which was not any longer used by any part of the eZ
  Publish kernel, has been removed.

- eZURLTranslator

  The class eZURLTranslator, which was not any longer used by any part of the eZ
  Publish kernel, has been removed.

- eZDebugErrorHandler()
  The eZDebugErrorHandler() function that was declared in lib/ezutils/classes/ezdebug.php,
  has been removed. The new function eZDebug::recursionProtectErrorHandler() is
  used now as custom error handler.

- OpenFTS search plugin
  There existed some code to use OpenFTS as a search engine. This code was never completed
  though, and in an unusable state. Therefore it has been removed.

- eZXML
  The deprecated eZXML library, a non-standard-compliant DOM implementation, has been removed.

- eZReference
  The refence module from the kernel has been removed.

- Embed template override rules inheritance
  In order to able to fix "#014328: Nested embedding override issue" inheritance of the
  embed template override rules are removed, this was a undocumented & unknown feature.   


New constants in config.php